--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         console.log("Starting quiz");
         document.getElementById('loader').classList.add('loader-hidden');
         setTimeout(() => {
-          document.getElementById('quiz').classList.remove('hidden Jezzy">
+          document.getElementById('quiz').classList.remove('hidden");
           document.getElementById('quiz').classList.add('fade-in');
           loadQuestion();
         }, 1500);
